# rust-sol-intel-advanced-prototype

./: .env.template  Cargo.toml  INTEGRATION_SUMMARY.md
jupiter_rust_working_code/: COMPLETE_SYSTEM.md  Cargo.toml  emergency-sell.sh  sell_all.py  test_key.rs
jupiter_rust_working_code/.cargo/: config.toml
jupiter_rust_working_code/examples/: Cargo.toml
jupiter_rust_working_code/examples/src/: benchmark_rpcs.rs  benchmark_rpcs_main.rs  compare_prices.rs  cost_analysis.rs  helius_swap.rs  helius_swap_main.rs  jupiter_vs_pumpportal.rs  pump_portal_buy.rs  pump_portal_compare.rs  pump_portal_sell.rs  pump_portal_test.rs  sniper_bot_live.rs  test_key.rs
jupiter_rust_working_code/examples/src/archive/: README.md  debug_swap.rs  debug_swap_main.rs  raw_test.rs  raw_test_main.rs  tiny_swap.rs  tiny_swap_main.rs  v6_swap.rs  v6_swap_main.rs  working_swap.rs  working_swap_main.rs
jupiter_rust_working_code/ladder-sniper/: Cargo.toml  OBSERVABILITY.md  RESEARCH_QUERIES.md
jupiter_rust_working_code/ladder-sniper/dashboard/: index.html  server.py
jupiter_rust_working_code/ladder-sniper/data/: research.duckdb
jupiter_rust_working_code/ladder-sniper/src/: balance_checker.rs  candle_builder.rs  data_export.rs  holder_count.rs  main.rs  main_gas_attempt.rs.backup  momentum.rs  paper_trading.rs  trade_events.rs  vwap.rs
jupiter_rust_working_code/monitor/: README.md  dashboard.html  server.py  start_monitor.sh
jupiter_rust_working_code/pump-portal-sdk/: Cargo.toml  README.md
jupiter_rust_working_code/pump-portal-sdk/src/: client.rs  lib.rs  types.rs
jupiter_rust_working_code/pump-sniper-bot/: .env.example  Cargo.toml  FRONTRUN_STRATEGY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  LAUNCH_DETECTION.md  QUICKSTART.md  README.md  SNIPER_RULES.md  STRATEGY.md
jupiter_rust_working_code/pump-sniper-bot/src/: config.rs  database.rs  detector.rs  frontrun.rs  launch_detector.rs  main.rs  monitor.rs  strategy.rs  verifier.rs
jupiter_rust_working_code/simple-sniper/: Cargo.toml  LIVE_TRADING.md  MONITORING_LOG.md  QUICKSTART.md  README.md  README_24_7.md  SYSTEM_READY.md  check_status.sh  keep_alive.sh  run.sh  watch_live.sh
jupiter_rust_working_code/simple-sniper/src/: main.rs
jupiter_rust_working_code/smart-sniper/: COMPARISON.md  Cargo.toml
jupiter_rust_working_code/smart-sniper/src/: exa_search.rs  main.rs  social_checker.rs
jupiter_rust_working_code/sniper-demon/: .env.example  Cargo.toml  QUICKSTART.md  README.md  test_api.sh
jupiter_rust_working_code/sniper-demon/prompts/: conflicting_signals.txt  exit_2x.txt  high_momentum.txt  high_rug_risk.txt  momentum_stalled.txt
jupiter_rust_working_code/sniper-demon/src/: main.rs
jupiter_rust_working_code/sniper-demon/src/ai/: claude.rs  deepseek.rs  mod.rs  openai.rs
src/: database.rs  execution.rs  feature_buffer.rs  inference.rs  main.rs  metrics.rs  questdb.rs  risk_manager.rs  types.rs  vector_store.rs  websocket.rs
