[package]
name = "jup"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
base64 = "0.22.1"
bs58 = "0.5.1"
jup-ag-sdk = { path = "../jup-ag-sdk/" }
pump-portal-sdk = { path = "../pump-portal-sdk/" }
solana-client = "2.2.7"
solana-sdk = "2.2.2"
bincode = "1.3.3"
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ============================================
# ACTIVE TOOLS
# ============================================

[[bin]]
name = "test-key"
path = "src/test_key.rs"

[[bin]]
name = "swap"
path = "src/helius_swap_main.rs"

[[bin]]
name = "benchmark-rpcs"
path = "src/benchmark_rpcs_main.rs"

[[bin]]
name = "pump-portal-buy"
path = "src/pump_portal_buy.rs"

[[bin]]
name = "pump-portal-sell"
path = "src/pump_portal_sell.rs"

[[bin]]
name = "pump-portal-test"
path = "src/pump_portal_test.rs"

[[bin]]
name = "pump-portal-compare"
path = "src/pump_portal_compare.rs"

[[bin]]
name = "jupiter-vs-pumpportal"
path = "src/jupiter_vs_pumpportal.rs"

[[bin]]
name = "compare-prices"
path = "src/compare_prices.rs"

[[bin]]
name = "cost-analysis"
path = "src/cost_analysis.rs"

# ============================================
# ARCHIVED (slower implementations)
# ============================================
# Use: cargo run --bin archive-{name}
#
# [[bin]]
# name = "archive-tiny-swap"
# path = "src/archive/tiny_swap_main.rs"
#
# [[bin]]
# name = "archive-debug-swap"
# path = "src/archive/debug_swap_main.rs"
#
# [[bin]]
# name = "archive-raw-test"
# path = "src/archive/raw_test_main.rs"
#
# [[bin]]
# name = "archive-working-swap"
# path = "src/archive/working_swap_main.rs"
#
# [[bin]]
# name = "archive-v6-swap"
# path = "src/archive/v6_swap_main.rs"
