[package]
name = "ladder-sniper"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "analytics"
path = "src/bin/analytics.rs"

[[bin]]
name = "monitor"
path = "src/bin/monitor.rs"

[dependencies]
pump-portal-sdk = { path = "../pump-portal-sdk" }
tokio = { version = "1.45", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
duckdb = { version = "1.1.3", features = ["bundled"] }
chrono = "0.4"
