[package]
name = "pump-sniper-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
pump-portal-sdk = { path = "../pump-portal-sdk" }
tokio = { version = "1.0", features = ["full"] }
solana-client = "2.2.7"
solana-sdk = "2.2.2"
solana-account-decoder = "2.2.7"
solana-transaction-status = "2.2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
tokio-tungstenite = "0.20"
futures-util = "0.3"
rusqlite = { version = "0.30", features = ["bundled"] }
borsh = "1.0"
base64 = "0.21"
rand = "0.8"
spl-token = "6.0"
