[package]
name = "simple-sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
pump-portal-sdk = { path = "../pump-portal-sdk" }
tokio = { version = "1.45", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
futures-util = "0.3"
